--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the students controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.brand-name,
+.form-heading, 
+.form-footer {
+  margin-top: 20px;
+  padding: 20px;
+  border: 2px solid #F4F4F4;
+  border-radius: 5px;
+}
+
+.btn-primary {
+  margin-top: 25px;
+}
