--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,5 +1,9 @@
+.mainDiv {
+  margin: 20px;
+}
+
 .brand-name,
-.form-heading, 
+.form-heading,
 .form-footer {
   margin-top: 20px;
   padding: 20px;
