added more react stuff real time update of a schoolname and other is now possible

--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,14 +1,13 @@
-.mainDiv {
-  margin: 20px;
-}
+
 
 .brand-name,
 .form-heading,
-.form-footer {
+.form-footer,
+.sheetHeader {
   margin-top: 20px;
   padding: 20px;
   border: 2px solid #F4F4F4;
-  border-radius: 5px;
+  border-radius: 3px;
 }
 
 .btn-primary {
