now subject can be added

--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -3,7 +3,8 @@
 .brand-name,
 .form-heading,
 .form-footer,
-.sheetHeader {
+.sheetHeader,
+.sheetFooter {
   margin-top: 20px;
   padding: 20px;
   border: 2px solid #F4F4F4;
